kubernetes/statefulset.yaml

apiVersion: v1
kind: Service
metadata:
  name: mft
  labels:
    app.kubernetes.io/name: activetransfer
    app.kubernetes.io/instance: mft
    app.kubernetes.io/version: "11.1"
spec:
  type: ClusterIP
  ports:
  - port: 5555
    protocol: TCP
    targetPort: http
    name: http
  - port: 9999
    protocol: TCP
    targetPort: diag
    name: diag
  - port: 5543
    protocol: TCP
    targetPort: https
    name: https
  selector:
    app.kubernetes.io/name: activetransfer
    app.kubernetes.io/instance: mft

---

apiVersion: v1
kind: Service
metadata:
  name: mft-h
  labels:
    app.kubernetes.io/name: activetransfer
    app.kubernetes.io/instance: mft
    app.kubernetes.io/version: "11.1"
spec:
  clusterIP: None
  ports:
    - port: 5555
      protocol: TCP
      targetPort: http
      name: http
    - port: 5543
      protocol: TCP
      targetPort: https
      name: https
  selector:
    app.kubernetes.io/name: activetransfer
    app.kubernetes.io/instance: mft

---

apiVersion: v1
kind: Service
metadata:
  name: mft-listeners
  labels:
    app.kubernetes.io/name: activetransfer
    app.kubernetes.io/instance: mft
    app.kubernetes.io/version: "11.1"
spec:
  type: NodePort
  ports:
  - port: 8000
    protocol: TCP
    targetPort: sftp
    name: sftp
  selector:
    app.kubernetes.io/name: activetransfer
    app.kubernetes.io/instance: mft

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mft
  labels:
    app.kubernetes.io/name: activetransfer
    app.kubernetes.io/instance: mft
    app.kubernetes.io/version: "11.1"
spec:
  serviceName: mft-h
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: activetransfer
      app.kubernetes.io/instance: mft
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics" 
        prometheus.io/port: "5555"
        prometheus.io/scheme: "http"
      labels:
        app.kubernetes.io/name: activetransfer
        app.kubernetes.io/instance: mft
    spec:
      imagePullSecrets:
        - name: cr-regcred
      serviceAccountName: default
      securityContext:
        runAsNonRoot: true
        allowPrivilegeEscalation: false
      containers:
        - name: mft
          securityContext:
            fsGroup: 1724
          image: "ghcr.io/staillanibm/activetransfer:11.1.20250219"
          imagePullPolicy: Always
          ports:
          - containerPort: 8000
            name: sftp
            protocol: TCP
          - containerPort: 5543
            name: https
            protocol: TCP
          - containerPort: 9999
            name: diag
            protocol: TCP
          - containerPort: 5555
            name: http
            protocol: TCP
          startupProbe:
            failureThreshold: 32
            initialDelaySeconds: 20
            periodSeconds: 5
            tcpSocket:
              port: http
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health/liveness
              port: http
            initialDelaySeconds: 0
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 2
          readinessProbe:
            failureThreshold: 5
            tcpSocket:
              port: http
            initialDelaySeconds: 0
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 2
          resources:
            limits:
              cpu: 2000m
              memory: 4096Mi
            requests:
              cpu: 1000m
              memory: 2048Mi
          volumeMounts:
            - name: application-properties
              mountPath: /opt/webmethods/IntegrationServer/instances/default/application.properties
              subPath: application.properties
              readOnly: true
            - name: mft-secrets
              mountPath: /etc/secrets
            - mountPath: /files
              name: fileshare
              readOnly: false
      volumes:
        - name: mft-secrets
          secret:
            secretName: mft-secrets
        - name: application-properties
          configMap:
            name: mft
            items:
            - key: application.properties
              path: application.properties
        - name: fileshare
          persistentVolumeClaim:
            claimName: mft-pvc
